fix: align icons and text vertically in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -777,8 +777,9 @@ form label {
   top: 0;
   display: flex;
   align-items: center;
-  align-self: flex-start;
-  height: 100%; /* Match icon height to container */
+  justify-content: center;
+  width: 40px;
+  height: 40px;
 }
 @media screen and (max-width: 768px) {
   .feature-left {
@@ -850,35 +851,30 @@ form label {
   .feature-left {
     display: flex;
     align-items: flex-start;
+    margin-bottom: 20px;
   }
   .feature-left .icon {
-    position: relative;
+    width: 30px;
+    height: 30px;
     margin-right: 15px;
     padding: 0;
-    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-shrink: 0;
-    align-self: flex-start;
   }
   .feature-left .feature-copy {
-    width: calc(100% - 50px);
-    float: none;
-    margin-top: 0;
+    flex: 1;
     padding: 0;
-    text-align: left;
-    align-self: flex-start;
+    margin: 0;
   }
   .feature-left .feature-copy h3 {
-    margin-top: 0;
-    padding-top: 0;
+    margin: 0 0 5px 0;
     line-height: 1.2;
   }
   .feature-left .feature-copy p {
-    margin-bottom: 10px;
-    margin-top: 5px;
+    margin: 0;
     line-height: 1.4;
-  }
-  #gtco-services .feature-left {
-    margin-bottom: 20px;
   }
 }
 
